fixing responsive glitch on smaller devices

--- a/styyles.css
+++ b/styyles.css
@@ -48,17 +48,17 @@ color: white;width: 430px; height: 50px; border-radius: 10px;font-size: 20px;}
 
 /*media queries*/
 @media only screen and (max-width: 480px) {
-    body{font-family: Arial, Helvetica, sans-serif; font-size: 15px;
+    body{font-family: Arial, Helvetica, sans-serif; font-size: 12px;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
         margin: 0;
     }
-    img{width: 80px; inset: 0px;}
+    img{width: 60px; inset: 0px; margin-top: 20px; }
     section{
         inset: 0px;
-        width: 400px;
+        width: 350px;
         height: 500px;
       box-shadow: 13px 13px 5px 4px rgba(0,0,0,0.63);
     -webkit-box-shadow: 13px 13px 5px 4px rgba(0,0,0,0.63);
@@ -70,20 +70,20 @@ color: white;width: 430px; height: 50px; border-radius: 10px;font-size: 20px;}
         flex-direction: column;
 margin-top: 10px;
         padding-left: 10px;
-        width: 270px;
+        width: 230px;
         inset: 0px;
         height: 40px;
         border-radius: 5px;
-        font-size: 15px;
+        font-size: 12px;
     border: solid 2px black
     
 
     }
     .submit{background-color: black;
-        color: white;width: 285px; height: 40px; border-radius: 10px;font-size: 20px;}
+        color: white;width: 250px; height: 40px; border-radius: 10px;font-size: 12px;}
         .bottom-part{position: absolute;
             top: 72%;
-            left: 15%;}
+            left: 14%;}
             .middle-part{ position: absolute;
                 top: 35%; /* 10% from the top of the container */
                 left: 15%;  /* 5% from the left of the container */
